# pkg-libgaiagraphics

./: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  gaiagraphics.pc.in  libgaiagraphics_0.5.orig.tar.gz.delta  libgaiagraphics_0.5.orig.tar.gz.id
debian/: changelog  control  copyright  libgaiagraphics-dev.lintian-overrides  libgaiagraphics1-dbg.lintian-overrides  libgaiagraphics1.lintian-overrides  libgaiagraphics1.symbols  rules  watch
headers/: Makefile.am  Makefile.in  gaiagraphics.h  gaiagraphics_internals.h
src/: Makefile.am  Makefile.in  gaiagraphics_adam7.c  gaiagraphics_aux.c  gaiagraphics_color_rules.c  gaiagraphics_gif.c  gaiagraphics_grids.c  gaiagraphics_image.c  gaiagraphics_io.c  gaiagraphics_jpeg.c  gaiagraphics_paint.c  gaiagraphics_png.c  gaiagraphics_quantize.c  gaiagraphics_svg.c  gaiagraphics_svg_aux.c  gaiagraphics_svg_xml.c  gaiagraphics_tiff.c
